# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
GAMES/: config.cfg
include/: c8_helper.h  chip8.h  cleanup.hh
src/: audio.cc  audio.hh  c8_decode.h  c8_def.h  c8_disassembler.h  c8_profiler.cc  c8_profiler.hh  chip8.c  config.c  config.h  loader.cc  loader.hh  main.c  main.cc  util.h
test/: CMakeLists.txt  chip8_test.cc
